Fix border wrapping around image

--- a/styles.css
+++ b/styles.css
@@ -78,14 +78,17 @@ header > h1 {
     text-align: center; 
 }
 .choice {
-    /* border: 4px solid lightpink;  */
-    /* border-radius: 100%;  */
+    border: 4px solid lightpink; 
+    border-radius: 100%; 
+    margin: 10px 30px;
+    width: 150px; 
+    /* padding: 10px;     */
     display: inline-block; 
     transition: all 0.8s ease; 
 }
 
 img {
-    width: 80%; 
+    width: 100%; 
     height: auto; 
 }
 
